linux 포팅 및 경로수정

--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -45,7 +45,7 @@
                 aria-describedby="submitHelp">로그인</button>
         <small id="submitHelp" class="form-text text-muted">
           <span>계정이 없으시다면</span>
-          <a href="#" th:href="@{/sign/up}">하나 만드세요</a>!
+          <a href="#" th:href="@{/sign-up}">하나 만드세요</a>!
         </small>
       </div>
 
